--- a/locale/es.po
+++ b/locale/es.po
@@ -110,6 +110,10 @@ msgctxt "field:account.journal,issued_check_account:"
 msgid "Issued Check Account"
 msgstr "Cuenta Cheque Emitido"
 
+msgctxt "field:account.journal,rejected_check_account:"
+msgid "Rejected Check Account"
+msgstr "Cuenta Cheque Rechazado"
+
 msgctxt "field:account.journal,third_check_account:"
 msgid "Third Check Account"
 msgstr "Cuenta Cheque Tercero"
@@ -246,6 +250,14 @@ msgctxt "field:account.third.check.held.start,journal:"
 msgid "Journal"
 msgstr "Diario"
 
+msgctxt "field:account.third.check.reject.start,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:account.third.check.reject.start,journal:"
+msgid "Journal"
+msgstr "Diario"
+
 msgctxt "field:account.third.check.revert_deposit.start,date:"
 msgid "Date"
 msgstr "Fecha"
@@ -253,6 +265,14 @@ msgstr "Fecha"
 msgctxt "field:account.third.check.revert_deposit.start,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:account.third.check.revert_reject.start,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:account.third.check.revert_reject.start,journal:"
+msgid "Journal"
+msgstr "Diario"
 
 msgctxt "field:account.voucher,issued_check:"
 msgid "Issued Checks"
@@ -322,9 +342,17 @@ msgctxt "model:account.third.check.held.start,name:"
 msgid "Third Check Held"
 msgstr "Cheque de Tercero a Cartera"
 
+msgctxt "model:account.third.check.reject.start,name:"
+msgid "Third Check Reject"
+msgstr "Rechazar Cheque de Tercero"
+
 msgctxt "model:account.third.check.revert_deposit.start,name:"
 msgid "Revert Third Check Deposit"
 msgstr "Revertir Depósito de Cheque"
+
+msgctxt "model:account.third.check.revert_reject.start,name:"
+msgid "Revert Third Check Reject"
+msgstr "Revertir Rechazo de Cheque"
 
 msgctxt "model:account.voucher-account.third.check,name:"
 msgid "Account Voucher - Account Third Check"
@@ -354,9 +382,17 @@ msgctxt "model:ir.action,name:wizard_third_check_held"
 msgid "Check Held"
 msgstr "Cheque de Tercero a Cartera"
 
+msgctxt "model:ir.action,name:wizard_third_check_reject"
+msgid "Check Reject"
+msgstr "Rechazar Cheque de Tercero"
+
 msgctxt "model:ir.action,name:wizard_third_check_revert_deposit"
 msgid "Revert Check Deposit"
 msgstr "Revertir Depósito de Cheque"
+
+msgctxt "model:ir.action,name:wizard_third_check_revert_reject"
+msgid "Revert Check Reject"
+msgstr "Revertir Rechazo de Cheque"
 
 msgctxt "model:ir.message,text:msg_check_not_debited"
 msgid "Check \"%(check)s\" is not debited"
@@ -377,6 +413,10 @@ msgstr "Cheque \"%(check)s\" no está en cartera"
 msgctxt "model:ir.message,text:msg_check_not_issued"
 msgid "Check \"%(check)s\" is not issued"
 msgstr "Cheque \"%(check)s\" no está emitido"
+
+msgctxt "model:ir.message,text:msg_check_not_rejected"
+msgid "Check \"%(check)s\" is not rejected"
+msgstr "Cheque \"%(check)s\" no está rechazado"
 
 msgctxt "model:ir.message,text:msg_delete_check"
 msgid "You can not delete a check that is used!"
@@ -554,6 +594,14 @@ msgctxt "wizard_button:account.third.check.held,start,held:"
 msgid "Held"
 msgstr "A Cartera"
 
+msgctxt "wizard_button:account.third.check.reject,start,end:"
+msgid "Cancel"
+msgstr "Cancelar"
+
+msgctxt "wizard_button:account.third.check.reject,start,reject:"
+msgid "Reject"
+msgstr "Rechazar"
+
 msgctxt "wizard_button:account.third.check.revert_deposit,start,end:"
 msgid "Cancel"
 msgstr "Cancelar"
@@ -561,3 +609,11 @@ msgstr "Cancelar"
 msgctxt "wizard_button:account.third.check.revert_deposit,start,revert:"
 msgid "Revert Deposit"
 msgstr "Revertir Depósito"
+
+msgctxt "wizard_button:account.third.check.revert_reject,start,end:"
+msgid "Cancel"
+msgstr "Cancelar"
+
+msgctxt "wizard_button:account.third.check.revert_reject,start,revert:"
+msgid "Revert Reject"
+msgstr "Revertir Rechazo"
