--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 6.6.1 - 2023-10-24
+* Add Currency field to Third Party Check
+
 Version 6.6.0 - 2023-09-26
 * Bug fixes (see git logs for details)
 * Improves voucher form
