--- a/locale/es.po
+++ b/locale/es.po
@@ -46,6 +46,10 @@ msgctxt "field:account.issued.check,clearing:"
 msgid "Clearing"
 msgstr "Clearing"
 
+msgctxt "field:account.issued.check,currency:"
+msgid "Currency"
+msgstr "Moneda"
+
 msgctxt "field:account.issued.check,date:"
 msgid "Date"
 msgstr "Fecha Cobro/Vencimiento"
@@ -141,6 +145,10 @@ msgstr "Cuenta Cheque Rechazado"
 msgctxt "field:account.journal,third_check_account:"
 msgid "Third Check Account"
 msgstr "Cuenta Cheque Tercero"
+
+msgctxt "field:account.statement.line,statement_journal_bank_account:"
+msgid "Bank Account"
+msgstr "Cuenta bancaria"
 
 msgctxt "field:account.third.check,account_bank_out:"
 msgid "Bank Account"
@@ -405,13 +413,13 @@ msgstr "Ya se utilizó el último número de cheque. Debería cerrar la chequera
 
 msgctxt "model:ir.message,text:msg_checkbook_must_be_next_number"
 msgid "The first number must be the next number in checkbook sequence."
-msgstr "El primer número debería ser el siguiente en la secuencia de la "
-"chequera."
+msgstr ""
+"El primer número debería ser el siguiente en la secuencia de la chequera."
 
 msgctxt "model:ir.message,text:msg_checkbook_to_draft"
 msgid "There are checks from this checkbook. Can not set to draft."
-msgstr "Ya hay cheques emitidos desde esta chequera. No se puede pasar a "
-"borrador."
+msgstr ""
+"Ya hay cheques emitidos desde esta chequera. No se puede pasar a borrador."
 
 msgctxt "model:ir.message,text:msg_checkbook_to_number_lower"
 msgid "The second number can not be lower than the first."
@@ -452,6 +460,18 @@ msgstr "Rechazar"
 msgctxt "model:ir.model.button,string:check_reverted_button"
 msgid "Revert"
 msgstr "Revertir"
+
+msgctxt "model:ir.model.button,string:checkbook_activate_button"
+msgid "Activate"
+msgstr "Activar"
+
+msgctxt "model:ir.model.button,string:checkbook_close_button"
+msgid "Close"
+msgstr "Cerrar"
+
+msgctxt "model:ir.model.button,string:checkbook_draft_button"
+msgid "Draft"
+msgstr "Borrador"
 
 msgctxt "model:ir.sequence.type,name:sequence_type_account_checkbook"
 msgid "Checkbook"
