--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Add Currency field to Third Party Check
+
 Version 6.6.0 - 2023-09-26
 * Bug fixes (see git logs for details)
 * Improves voucher form
