Third checks: added new 'Endorsed' field

--- a/locale/es.po
+++ b/locale/es.po
@@ -222,6 +222,10 @@ msgctxt "field:account.third.check,signatory:"
 msgid "Signatory"
 msgstr "Firma"
 
+msgctxt "field:account.third.check,endorsed:"
+msgid "Endorsed"
+msgstr "Endosado"
+
 msgctxt "field:account.third.check,source_party:"
 msgid "Source Party"
 msgstr "Origen"
