Cash Issued checks: new wizard to cash issued checks in bank

--- a/locale/es.po
+++ b/locale/es.po
@@ -102,6 +102,42 @@ msgctxt "field:account.issued.check,voucher:"
 msgid "Voucher"
 msgstr "Comprobante"
 
+msgctxt "field:account.issued.check,cash_move:"
+msgid "Cash Move"
+msgstr "Asiento cobro"
+
+msgctxt "field:account.issued.check.cash.start,bank_account:"
+msgid "Bank Account"
+msgstr "Cuenta bancaria"
+
+msgctxt "field:account.issued.check.cash.start,checkbook:"
+msgid "Checkbook"
+msgstr "Chequera"
+
+msgctxt "field:account.issued.check.cash.start,date_out:"
+msgid "Date Out"
+msgstr "Fecha Emisión"
+
+msgctxt "field:account.issued.check.cash.start,date:"
+msgid "Date"
+msgstr "Fecha Cobro"
+
+msgctxt "field:account.issued.check.cash.start,number:"
+msgid "Number"
+msgstr "Número"
+
+msgctxt "field:account.issued.check.cash.start,amount:"
+msgid "Amount"
+msgstr "Importe"
+
+msgctxt "field:account.issued.check.cash.start,currency:"
+msgid "Currency"
+msgstr "Moneda"
+
+msgctxt "field:account.issued.check.cash.start,cash_account:"
+msgid "Cash Account"
+msgstr "Cuenta de cobro"
+
 msgctxt "field:account.issued.check.cancel.start,bank_account:"
 msgid "Bank Account"
 msgstr "Cuenta bancaria"
@@ -302,6 +338,10 @@ msgctxt "model:account.issued.check,name:"
 msgid "Account Issued Check"
 msgstr "Cheque Emitido"
 
+msgctxt "model:account.issued.check.cash.start,name:"
+msgid "Issued Check Cash Start"
+msgstr "Cobrar cheques propios - Inicio"
+
 msgctxt "model:account.issued.check.cancel.start,name:"
 msgid "Issued Check Cancel Start"
 msgstr "Cancelar cheques propios - Inicio"
@@ -345,6 +385,10 @@ msgstr "Comprobante contable - Cheque de Tercero"
 msgctxt "model:ir.action,name:act_checkbook_tree"
 msgid "Checkbooks"
 msgstr "Chequeras"
+
+msgctxt "model:ir.action,name:act_issued_check_cash"
+msgid "Cash Issued Checks"
+msgstr "Cobrar cheques propios"
 
 msgctxt "model:ir.action,name:act_issued_check_cancel"
 msgid "Cancel Issued Checks"
@@ -492,6 +536,14 @@ msgctxt "model:ir.message,text:msg_delete_checkbook"
 msgid "You can not delete a used checkbook."
 msgstr "No es posible eliminar una chequera en uso."
 
+msgctxt "model:ir.message,text:msg_check_already_exists"
+msgid "The check \"%(number)s\" already exists."
+msgstr "El cheque \"%(number)s\" ya existe."
+
+msgctxt "model:ir.message,text:msg_number_not_valid"
+msgid "The number \"%(number)s\" is not valid for the sequence."
+msgstr "El número \"%(number)s\" no es válido según la secuencia."
+
 msgctxt "model:ir.model.button,string:check_debited_button"
 msgid "Debit"
 msgstr "Debitar"
@@ -543,6 +595,10 @@ msgstr "Chequeras"
 msgctxt "model:ir.ui.menu,name:menu_issued_check"
 msgid "Issued Checks"
 msgstr "Cheques Emitidos"
+
+msgctxt "model:ir.ui.menu,name:menu_issued_check_cash"
+msgid "Cash Issued Checks"
+msgstr "Cobrar cheques propios"
 
 msgctxt "model:ir.ui.menu,name:menu_issued_check_cancel"
 msgid "Cancel Issued Checks"
@@ -683,6 +739,14 @@ msgstr "Destino"
 msgctxt "view:account.voucher:"
 msgid "Checks"
 msgstr "Cheques"
+
+msgctxt "wizard_button:account.issued.check.cash,start,cash:"
+msgid "Proceed"
+msgstr "Proceder"
+
+msgctxt "wizard_button:account.issued.check.cash,start,end:"
+msgid "Abort"
+msgstr "Abortar"
 
 msgctxt "wizard_button:account.issued.check.cancel,start,cancel:"
 msgid "Proceed"
